update swagger host to production railway url
